# pharmpy

./: .bumpversion.cfg  .coveragerc  .gitignore  .mailmap  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  LICENSE  MANIFEST.in  README.rst  TODO.rst  appveyor.yml  build.sh  bumpversion.sh  clean_cache.sh  codecov.yml  demo.py  dependabot.yml  design.txt  docs-requirements.txt  docs.sh  lint-requirements.txt  main.py  output_design  pheno_real.mod  pretest-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  update_requirements.sh
.devcontainer/: devcontainer.json
.devcontainer/py311/: devcontainer.json
.devcontainer/py312/: devcontainer.json
.devcontainer/py313/: devcontainer.json
.devcontainer/py314/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: deploy.yml  importtime.yml  integration.yml  main.yml  publish-docs.yml  test-pharmr-dispatch.yaml  test-tag-workflow.yml  test-workflow-wait.yml  test_new_deploy.yml
docs/: NONMEM.rst  allometry.rst  amd.rst  amd_drug_metabolite.rst  amd_pk.rst  amd_pkpd.rst  amd_tmdd.rst  api.rst  api_model.rst  api_modeling.rst  api_objects.rst  api_pharmpy.rst  api_tools.rst  api_workflows.rst  apidoc.py  bootstrap.rst  cdd.rst  changelog.rst  citation.rst  cli.rst  common_features.rst  conf.py  configuration.rst  context.rst  contribute.rst  contributors.rst  covsearch.rst  crossval.rst  custom.css  data.rst  design.rst  developers.rst  development.rst  dispatching.rst  drug_metabolite.rst  estmethod.rst  frem.rst  future.rst  general.rst  getting_started.rst  (+49 more)
docs/_ext/: conversion.py  pharmpy_snippet.py
docs/reference/: index.rst  modules.rst  pysn.api_nonmem.detect.rst  pysn.api_nonmem.execute.engine.rst  pysn.api_nonmem.execute.rst  pysn.api_nonmem.input.rst  pysn.api_nonmem.model.rst  pysn.api_nonmem.output.model_estimation.rst  pysn.api_nonmem.output.model_output.rst  pysn.api_nonmem.output.rst  pysn.api_nonmem.parameters.parameter_model.rst  pysn.api_nonmem.parameters.rst  pysn.api_nonmem.records.data_record.rst  pysn.api_nonmem.records.factory.rst  pysn.api_nonmem.records.omega_record.rst  pysn.api_nonmem.records.option_record.rst  pysn.api_nonmem.records.parser.rst  pysn.api_nonmem.records.problem_record.rst  pysn.api_nonmem.records.raw_record.rst  pysn.api_nonmem.records.record.rst  pysn.api_nonmem.records.records_list.rst  pysn.api_nonmem.records.rst  pysn.api_nonmem.records.theta_record.rst  pysn.api_nonmem.rst  pysn.api_utils.rst  pysn.cli.rst  pysn.execute.engine.rst  pysn.execute.environment.rst  pysn.execute.job.rst  pysn.execute.rst  pysn.execute.run_directory.rst  pysn.generic.rst  pysn.model.rst  pysn.output.model_estimation.rst  pysn.output.model_output.rst  pysn.output.rst  pysn.parameters.distributions.rst  pysn.parameters.parameter_model.rst  pysn.parameters.rst  pysn.parameters.scalars.rst  (+6 more)
local/: README
psn/: model.py
records/: option_record.py
scripts/: deptree.sh  lint_api_modeling.py  lint_deps_imports.sh  lint_type_hints.py  render_pypi.py  update_requirements.sh  update_tool_results.sh
src/: conftest.py
src/pharmpy/: __init__.py  __main__.py  api_utils.py  cli.py  config.py  covariate_effect.py  data.py  data_structures.py  datainfo.py  deps.py  estimation.py  expressions.py  generic.py  lazyload.py  lock.py  math.py  model.py  model_factory.py  model_transformation.py  objects.py  parameter.py  parameter_sampling.py  parameters.py  random_variables.py  results.py  source.py  source_io.py  statements.py  symbols.py  tasks.py  unicode.py  utils.py  visualization.py
src/pysn/: __init__.py  __main__.py  api_utils.py  cli.py  generic.py  model.py  (+2 more)
tests/: conftest.py  lib.py  option_record.py  parameter.py  plugins.py  raw_record.py  test_cli.py  test_config.py  test_covariate_effect.py  test_data.py  test_datainfo.py  test_estimation.py  test_lazyload.py  test_lock.py  test_math.py  test_model.py  test_model_transformation.py  test_parameter.py  test_parameter_sampling.py  test_parse_utils.py  test_plugins.py  test_pysn.py  test_random_variables.py  test_results.py  test_search.py  test_statements.py  test_utils.py
unit/: option_description.py  record.py
(+1528 files in other folders)
